BUG contraste texte + fond

--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -1153,7 +1153,7 @@ textarea {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #BEB45A;
+  background-color: #0d6efd;
 }
 
 .modal {
