--- a/assets/style.css
+++ b/assets/style.css
@@ -87,7 +87,6 @@ body {
 }
 #about-me p {
 	width: 80%;
-	font-size: 14px;
 }
 
 #gallery {
